--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,7 @@
 <header class="container header select-none">
   <img class="logo" src="{{ site.baseUrl }}/static/img/logo.jpg" />
   <a class="title" href="{{ site.baseUrl }}/">{{ site.title }}</a>
+  <input type="checkbox" id="menu-checkbox">
   <nav class="menu">
     <a href="{{ site.baseUrl }}/" class="hover-underline">Blog</a>
     <a href="{{ site.baseUrl }}/pages/categories.html" class="hover-underline">Categories</a>
@@ -9,5 +10,5 @@
     <a href="{{ site.baseUrl }}/pages/chat.html" class="hover-underline">Chat</a>
     <a href="{{ site.baseUrl }}/pages/about.html" class="hover-underline">About</a>
   </nav>
-  <span class="menu-togger"></span>
+  <label class="menu-togger" for="menu-checkbox"></label>
 </header>
