--- a/static/css/highlight.css
+++ b/static/css/highlight.css
@@ -1,75 +1,75 @@
-.highlight .c { color: #8f5902; font-style: italic } /* Comment */
-.highlight .err { color: #a40000; border: 1px solid #ef2929 } /* Error */
+.highlight .c { color: #6a737d; font-style: italic } /* Comment */
+.highlight .err { color: #a40000 } /* Error */
 .highlight .g { color: #000000 } /* Generic */
-.highlight .k { color: #204a87; font-weight: bold } /* Keyword */
+.highlight .k { color: #d73a49;  } /* Keyword */
 .highlight .l { color: #000000 } /* Literal */
 .highlight .n { color: #000000 } /* Name */
-.highlight .o { color: #ce5c00; font-weight: bold } /* Operator */
+.highlight .o { color: #ce5c00;  } /* Operator */
 .highlight .x { color: #000000 } /* Other */
-.highlight .p { color: #000000; font-weight: bold } /* Punctuation */
-.highlight .ch { color: #8f5902; font-style: italic } /* Comment.Hashbang */
-.highlight .cm { color: #8f5902; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #8f5902; font-style: italic } /* Comment.Preproc */
-.highlight .cpf { color: #8f5902; font-style: italic } /* Comment.PreprocFile */
-.highlight .c1 { color: #8f5902; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #8f5902; font-style: italic } /* Comment.Special */
+.highlight .p { color: #000000;  } /* Punctuation */
+.highlight .ch { color: #6a737d; font-style: italic } /* Comment.Hashbang */
+.highlight .cm { color: #6a737d; font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: #6a737d; font-style: italic } /* Comment.Preproc */
+.highlight .cpf { color: #6a737d; font-style: italic } /* Comment.PreprocFile */
+.highlight .c1 { color: #6a737d; font-style: italic } /* Comment.Single */
+.highlight .cs { color: #6a737d; font-style: italic } /* Comment.Special */
 .highlight .gd { color: #a40000 } /* Generic.Deleted */
 .highlight .ge { color: #000000; font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #ef2929 } /* Generic.Error */
-.highlight .gh { color: #000080; font-weight: bold } /* Generic.Heading */
+.highlight .gh { color: #000080;  } /* Generic.Heading */
 .highlight .gi { color: #00A000 } /* Generic.Inserted */
 .highlight .go { color: #000000; font-style: italic } /* Generic.Output */
 .highlight .gp { color: #8f5902 } /* Generic.Prompt */
-.highlight .gs { color: #000000; font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
-.highlight .gt { color: #a40000; font-weight: bold } /* Generic.Traceback */
-.highlight .kc { color: #204a87; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #204a87; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #204a87; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #204a87; font-weight: bold } /* Keyword.Pseudo */
-.highlight .kr { color: #204a87; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #204a87; font-weight: bold } /* Keyword.Type */
+.highlight .gs { color: #000000;  } /* Generic.Strong */
+.highlight .gu { color: #800080;  } /* Generic.Subheading */
+.highlight .gt { color: #a40000;  } /* Generic.Traceback */
+.highlight .kc { color: #005cc5;  } /* Keyword.Constant */
+.highlight .kd { color: #d73a49; } /* Keyword.Declaration */
+.highlight .kn { color: #d73a49; } /* Keyword.Namespace */
+.highlight .kp { color: #d73a49; } /* Keyword.Pseudo */
+.highlight .kr { color: #d73a49; } /* Keyword.Reserved */
+.highlight .kt { color: #d73a49; } /* Keyword.Type */
 .highlight .ld { color: #000000 } /* Literal.Date */
-.highlight .m { color: #6d88f1; font-weight: bold } /* Literal.Number */
-.highlight .s { color: #4e9a06 } /* Literal.String */
-.highlight .na { color: #c4a000 } /* Name.Attribute */
-.highlight .nb { color: #204a87 } /* Name.Builtin */
+.highlight .m { color: #6d88f1;  } /* Literal.Number */
+.highlight .s { color: #032f62 } /* Literal.String */
+.highlight .na { color: #005cc5 } /* Name.Attribute */
+.highlight .nb { color: #005cc5 } /* Name.Builtin */
 .highlight .nc { color: #000000 } /* Name.Class */
 .highlight .no { color: #000000 } /* Name.Constant */
-.highlight .nd { color: #5c35cc; font-weight: bold } /* Name.Decorator */
+.highlight .nd { color: #5c35cc;  } /* Name.Decorator */
 .highlight .ni { color: #ce5c00 } /* Name.Entity */
-.highlight .ne { color: #cc0000; font-weight: bold } /* Name.Exception */
+.highlight .ne { color: #cc0000;  } /* Name.Exception */
 .highlight .nf { color: #000000 } /* Name.Function */
 .highlight .nl { color: #f57900 } /* Name.Label */
 .highlight .nn { color: #000000 } /* Name.Namespace */
 .highlight .nx { color: #000000 } /* Name.Other */
 .highlight .py { color: #000000 } /* Name.Property */
-.highlight .nt { color: #204a87; font-weight: bold } /* Name.Tag */
+.highlight .nt { color: #d73a49;  } /* Name.Tag */
 .highlight .nv { color: #000000 } /* Name.Variable */
-.highlight .ow { color: #204a87; font-weight: bold } /* Operator.Word */
+.highlight .ow { color: #d73a49;  } /* Operator.Word */
 .highlight .w { color: #f8f8f8; text-decoration: underline } /* Text.Whitespace */
-.highlight .mb { color: #6d88f1; font-weight: bold } /* Literal.Number.Bin */
-.highlight .mf { color: #6d88f1; font-weight: bold } /* Literal.Number.Float */
-.highlight .mh { color: #6d88f1; font-weight: bold } /* Literal.Number.Hex */
-.highlight .mi { color: #6d88f1; font-weight: bold } /* Literal.Number.Integer */
-.highlight .mo { color: #6d88f1; font-weight: bold } /* Literal.Number.Oct */
-.highlight .sa { color: #4e9a06 } /* Literal.String.Affix */
-.highlight .sb { color: #4e9a06 } /* Literal.String.Backtick */
-.highlight .sc { color: #4e9a06 } /* Literal.String.Char */
-.highlight .dl { color: #4e9a06 } /* Literal.String.Delimiter */
+.highlight .mb { color: #005cc5;  } /* Literal.Number.Bin */
+.highlight .mf { color: #005cc5;  } /* Literal.Number.Float */
+.highlight .mh { color: #005cc5;  } /* Literal.Number.Hex */
+.highlight .mi { color: #005cc5;  } /* Literal.Number.Integer */
+.highlight .mo { color: #005cc5;  } /* Literal.Number.Oct */
+.highlight .sa { color: #032f62 } /* Literal.String.Affix */
+.highlight .sb { color: #032f62 } /* Literal.String.Backtick */
+.highlight .sc { color: #032f62 } /* Literal.String.Char */
+.highlight .dl { color: #032f62 } /* Literal.String.Delimiter */
 .highlight .sd { color: #8f5902; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #4e9a06 } /* Literal.String.Double */
-.highlight .se { color: #4e9a06 } /* Literal.String.Escape */
-.highlight .sh { color: #4e9a06 } /* Literal.String.Heredoc */
-.highlight .si { color: #4e9a06 } /* Literal.String.Interpol */
-.highlight .sx { color: #4e9a06 } /* Literal.String.Other */
-.highlight .sr { color: #4e9a06 } /* Literal.String.Regex */
-.highlight .s1 { color: #4e9a06 } /* Literal.String.Single */
-.highlight .ss { color: #4e9a06 } /* Literal.String.Symbol */
+.highlight .s2 { color: #032f62 } /* Literal.String.Double */
+.highlight .se { color: #032f62 } /* Literal.String.Escape */
+.highlight .sh { color: #032f62 } /* Literal.String.Heredoc */
+.highlight .si { color: #032f62 } /* Literal.String.Interpol */
+.highlight .sx { color: #032f62 } /* Literal.String.Other */
+.highlight .sr { color: #032f62 } /* Literal.String.Regex */
+.highlight .s1 { color: #032f62 } /* Literal.String.Single */
+.highlight .ss { color: #032f62 } /* Literal.String.Symbol */
 .highlight .bp { color: #3465a4 } /* Name.Builtin.Pseudo */
 .highlight .fm { color: #000000 } /* Name.Function.Magic */
 .highlight .vc { color: #000000 } /* Name.Variable.Class */
 .highlight .vg { color: #000000 } /* Name.Variable.Global */
 .highlight .vi { color: #000000 } /* Name.Variable.Instance */
 .highlight .vm { color: #000000 } /* Name.Variable.Magic */
-.highlight .il { color: #6d88f1; font-weight: bold } /* Literal.Number.Integer.Long */
+.highlight .il { color: #6d88f1; } /* Literal.Number.Integer.Long */
