--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -6,7 +6,7 @@
 {% include head.html %}
 <body ondragstart="return false;">
 {% include header.html %}
-<div class="container page-post">
+<div class="container page-post animation-fade-up">
   <h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
   <div class="post">
     {{ content }}
