--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -55,6 +55,32 @@ body::-webkit-scrollbar {
   user-select: none;
   -webkit-user-select: none;
 }
+.animation-fade-up {
+  animation-timing-function: ease;
+  animation-duration: 800ms;
+  animation-fill-mode: both;
+  animation-name: fade-up;
+}
+@keyframes fade-up {
+  from {
+    opacity: 0;
+    transform: translateY(36px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+@-webkit-keyframes fade-up {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(36px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+  }
+}
 .hover-underline {
   position: relative;
 }
@@ -434,20 +460,22 @@ body::-webkit-scrollbar {
   .header .menu {
     position: fixed;
     right: 15px;
-    top: 65px;
+    top: 75px;
     display: inline-block;
+    /*透明度为0，点击无效*/
+    opacity: 0;
+    pointer-events: none;
     box-shadow: 0 0px 5px rgba(0, 0, 0, 0.1);
-    max-height: 0px;
     overflow: hidden;
-    transition: all 500ms linear;
-    -webkit-transition: all 500ms linear;
+    transition: all 300ms ease-in-out;
+    -webkit-transition: all 300ms ease-in-out;
   }
   .header .menu a {
     background-color: #ffffff;
     text-align: center;
     display: block;
     margin: 0 !important;
-    padding: 8px 20px;
+    padding: 8px 22px;
     font-size: 12px;
     transition: background-color 400ms linear;
     -webkit-transition: background-color 400ms linear;
@@ -462,7 +490,9 @@ body::-webkit-scrollbar {
     display: none;
   }
   .header input:checked ~ .menu {
-    max-height: 200px;
+    top: 65px;
+    pointer-events: auto;
+    opacity: 1;
   }
   .footer > * {
     font-size: 12px;
