--- a/static/css/highlight.css
+++ b/static/css/highlight.css
@@ -1,75 +1,60 @@
-.highlight .c { color: #6a737d; font-style: italic } /* Comment */
-.highlight .err { color: #a40000 } /* Error */
-.highlight .g { color: #000000 } /* Generic */
-.highlight .k { color: #d73a49;  } /* Keyword */
-.highlight .l { color: #000000 } /* Literal */
-.highlight .n { color: #000000 } /* Name */
-.highlight .o { color: #ce5c00;  } /* Operator */
-.highlight .x { color: #000000 } /* Other */
-.highlight .p { color: #000000;  } /* Punctuation */
-.highlight .ch { color: #6a737d; font-style: italic } /* Comment.Hashbang */
-.highlight .cm { color: #6a737d; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #6a737d; font-style: italic } /* Comment.Preproc */
-.highlight .cpf { color: #6a737d; font-style: italic } /* Comment.PreprocFile */
-.highlight .c1 { color: #6a737d; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #6a737d; font-style: italic } /* Comment.Special */
-.highlight .gd { color: #a40000 } /* Generic.Deleted */
-.highlight .ge { color: #000000; font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #ef2929 } /* Generic.Error */
-.highlight .gh { color: #000080;  } /* Generic.Heading */
-.highlight .gi { color: #00A000 } /* Generic.Inserted */
-.highlight .go { color: #000000; font-style: italic } /* Generic.Output */
-.highlight .gp { color: #8f5902 } /* Generic.Prompt */
-.highlight .gs { color: #000000;  } /* Generic.Strong */
-.highlight .gu { color: #800080;  } /* Generic.Subheading */
-.highlight .gt { color: #a40000;  } /* Generic.Traceback */
-.highlight .kc { color: #005cc5;  } /* Keyword.Constant */
-.highlight .kd { color: #d73a49; } /* Keyword.Declaration */
-.highlight .kn { color: #d73a49; } /* Keyword.Namespace */
-.highlight .kp { color: #d73a49; } /* Keyword.Pseudo */
-.highlight .kr { color: #d73a49; } /* Keyword.Reserved */
-.highlight .kt { color: #d73a49; } /* Keyword.Type */
-.highlight .ld { color: #000000 } /* Literal.Date */
-.highlight .m { color: #6d88f1;  } /* Literal.Number */
-.highlight .s { color: #032f62 } /* Literal.String */
-.highlight .na { color: #005cc5 } /* Name.Attribute */
-.highlight .nb { color: #005cc5 } /* Name.Builtin */
-.highlight .nc { color: #000000 } /* Name.Class */
-.highlight .no { color: #000000 } /* Name.Constant */
-.highlight .nd { color: #5c35cc;  } /* Name.Decorator */
-.highlight .ni { color: #ce5c00 } /* Name.Entity */
-.highlight .ne { color: #cc0000;  } /* Name.Exception */
-.highlight .nf { color: #000000 } /* Name.Function */
-.highlight .nl { color: #f57900 } /* Name.Label */
-.highlight .nn { color: #000000 } /* Name.Namespace */
-.highlight .nx { color: #000000 } /* Name.Other */
-.highlight .py { color: #000000 } /* Name.Property */
-.highlight .nt { color: #d73a49;  } /* Name.Tag */
-.highlight .nv { color: #000000 } /* Name.Variable */
-.highlight .ow { color: #d73a49;  } /* Operator.Word */
-.highlight .w { color: #f8f8f8; text-decoration: underline } /* Text.Whitespace */
-.highlight .mb { color: #005cc5;  } /* Literal.Number.Bin */
-.highlight .mf { color: #005cc5;  } /* Literal.Number.Float */
-.highlight .mh { color: #005cc5;  } /* Literal.Number.Hex */
-.highlight .mi { color: #005cc5;  } /* Literal.Number.Integer */
-.highlight .mo { color: #005cc5;  } /* Literal.Number.Oct */
-.highlight .sa { color: #032f62 } /* Literal.String.Affix */
-.highlight .sb { color: #032f62 } /* Literal.String.Backtick */
-.highlight .sc { color: #032f62 } /* Literal.String.Char */
-.highlight .dl { color: #032f62 } /* Literal.String.Delimiter */
-.highlight .sd { color: #8f5902; font-style: italic } /* Literal.String.Doc */
-.highlight .s2 { color: #032f62 } /* Literal.String.Double */
-.highlight .se { color: #032f62 } /* Literal.String.Escape */
-.highlight .sh { color: #032f62 } /* Literal.String.Heredoc */
-.highlight .si { color: #032f62 } /* Literal.String.Interpol */
-.highlight .sx { color: #032f62 } /* Literal.String.Other */
-.highlight .sr { color: #032f62 } /* Literal.String.Regex */
-.highlight .s1 { color: #032f62 } /* Literal.String.Single */
-.highlight .ss { color: #032f62 } /* Literal.String.Symbol */
-.highlight .bp { color: #3465a4 } /* Name.Builtin.Pseudo */
-.highlight .fm { color: #000000 } /* Name.Function.Magic */
-.highlight .vc { color: #000000 } /* Name.Variable.Class */
-.highlight .vg { color: #000000 } /* Name.Variable.Global */
-.highlight .vi { color: #000000 } /* Name.Variable.Instance */
-.highlight .vm { color: #000000 } /* Name.Variable.Magic */
-.highlight .il { color: #6d88f1; } /* Literal.Number.Integer.Long */
+/* .highlight  { background: #ffffff; } */
+.highlight .c { color: #999988; font-style: italic } /* Comment */
+.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
+.highlight .k { font-weight: bold } /* Keyword */
+.highlight .o { font-weight: bold } /* Operator */
+.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
+.highlight .cp { color: #999999; font-weight: bold } /* Comment.Preproc */
+.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
+.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
+.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
+.highlight .gd .x { color: #000000; background-color: #ffaaaa } /* Generic.Deleted.Specific */
+.highlight .ge { font-style: italic } /* Generic.Emph */
+.highlight .gr { color: #aa0000 } /* Generic.Error */
+.highlight .gh { color: #999999 } /* Generic.Heading */
+.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
+.highlight .gi .x { color: #000000; background-color: #aaffaa } /* Generic.Inserted.Specific */
+.highlight .go { color: #888888 } /* Generic.Output */
+.highlight .gp { color: #555555 } /* Generic.Prompt */
+.highlight .gs { font-weight: bold } /* Generic.Strong */
+.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
+.highlight .gt { color: #aa0000 } /* Generic.Traceback */
+.highlight .kc { font-weight: bold } /* Keyword.Constant */
+.highlight .kd { font-weight: bold } /* Keyword.Declaration */
+.highlight .kp { font-weight: bold } /* Keyword.Pseudo */
+.highlight .kr { font-weight: bold } /* Keyword.Reserved */
+.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
+.highlight .m { color: #009999 } /* Literal.Number */
+.highlight .s { color: #d14 } /* Literal.String */
+.highlight .na { color: #008080 } /* Name.Attribute */
+.highlight .nb { color: #0086B3 } /* Name.Builtin */
+.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
+.highlight .no { color: #008080 } /* Name.Constant */
+.highlight .ni { color: #800080 } /* Name.Entity */
+.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
+.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
+.highlight .nn { color: #555555 } /* Name.Namespace */
+.highlight .nt { color: #000080 } /* Name.Tag */
+.highlight .nv { color: #008080 } /* Name.Variable */
+.highlight .ow { font-weight: bold } /* Operator.Word */
+.highlight .w { color: #bbbbbb } /* Text.Whitespace */
+.highlight .mf { color: #009999 } /* Literal.Number.Float */
+.highlight .mh { color: #009999 } /* Literal.Number.Hex */
+.highlight .mi { color: #009999 } /* Literal.Number.Integer */
+.highlight .mo { color: #009999 } /* Literal.Number.Oct */
+.highlight .sb { color: #d14 } /* Literal.String.Backtick */
+.highlight .sc { color: #d14 } /* Literal.String.Char */
+.highlight .sd { color: #d14 } /* Literal.String.Doc */
+.highlight .s2 { color: #d14 } /* Literal.String.Double */
+.highlight .se { color: #d14 } /* Literal.String.Escape */
+.highlight .sh { color: #d14 } /* Literal.String.Heredoc */
+.highlight .si { color: #d14 } /* Literal.String.Interpol */
+.highlight .sx { color: #d14 } /* Literal.String.Other */
+.highlight .sr { color: #009926 } /* Literal.String.Regex */
+.highlight .s1 { color: #d14 } /* Literal.String.Single */
+.highlight .ss { color: #990073 } /* Literal.String.Symbol */
+.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
+.highlight .vc { color: #008080 } /* Name.Variable.Class */
+.highlight .vg { color: #008080 } /* Name.Variable.Global */
+.highlight .vi { color: #008080 } /* Name.Variable.Instance */
+.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
