--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="container header select-none">
   <img class="logo" src="{{ site.baseUrl }}/static/img/logo.jpg" />
-  <a class="title" href="{{ site.baseUrl }}/">{{ site.title }}</a>
+  <span class="title">{{ site.title }}</span>
   <input type="checkbox" id="menu-checkbox">
   <nav class="menu">
     <a href="{{ site.baseUrl }}/" class="hover-underline">Home</a>
