Squashed commit of the following:
commit 34f546d5f489f61177f5b2b10cc6c1e635f665f2
Author: tym <1772314831@qq.com>
Date:   Mon Jan 21 23:34:16 2019 +0800

    sitemap

commit e69a5a2217c92a7a3c34d2c5435b7b53de703683
Author: tym <1772314831@qq.com>
Date:   Mon Jan 21 22:59:32 2019 +0800

    样式优化

commit c37055fde9b23b6ab84531f98aaa428bd3977c99
Author: tym <1772314831@qq.com>
Date:   Sun Jan 6 18:09:10 2019 +0800

    自适应

commit 6136e4f7322776646f15bc47331140bddbfb29d0
Author: tym <1772314831@qq.com>
Date:   Sun Jan 6 00:32:37 2019 +0800

    功能重写

commit 437c96ee37310888799cfa0cfb71ee9b3e9d58ab
Author: tym <1772314831@qq.com>
Date:   Sat Jan 5 23:00:12 2019 +0800

    调整分类

commit 95408b0d8286004d064be528d33fe5ed5c834290
Author: tym <1772314831@qq.com>
Date:   Sat Jan 5 22:43:58 2019 +0800

    post

commit 519f4a8e2479a6da70a75f49e5e9b230f1c9c21a
Author: tym <1772314831@qq.com>
Date:   Thu Jan 3 23:46:13 2019 +0800

    page

commit 4213986916cdcf8807695e3e14317c80334b1fb8
Author: tym <1772314831@qq.com>
Date:   Thu Jan 3 00:04:14 2019 +0800

    优化

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,12 @@
-<header class="header select-none">
-    <a class="logo" title="{{site.title}}" href="{{site.context}}/">
-        <img src="{{site.context}}/static/img/logo.jpg">
-    </a>
-    <a class="title" href="{{site.context}}/">{{site.title}}</a>
-    <nav class="menu">
-        <a href="{{site.context}}/">Blog</a>
-        <a href="{{site.context}}/pages/categories.html">Categories</a>
-        <a href="{{site.context}}/pages/search.html">Search</a>
-        <a href="{{site.context}}/pages/links.html">Links</a>
-        <a href="{{site.context}}/pages/chat.html">Chat</a>
-        <a href="{{site.context}}/pages/about.html">About</a>
-    </nav>
-    <span class="icon"></span>
+<header class="container header select-none">
+  <img class="logo" src="{{ site.baseUrl }}/static/img/logo.jpg" />
+  <span class="title">{{ site.title }}</span>
+  <input type="checkbox" id="menu-checkbox">
+  <nav class="menu">
+    <a href="{{ site.baseUrl }}/" class="hover-underline">Home</a>
+    {% for menu in site.menu %}
+    <a href="{{ site.baseUrl }}{{ menu.url }}" class="hover-underline">{{ menu.title }}</a>
+    {% endfor %}
+  </nav>
+  <label class="menu-togger" for="menu-checkbox"></label>
 </header>
