--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,295 +1,545 @@
-html, body {
-    padding: 0;
-    margin: 0;
-}
-
+html,
 body {
-    font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei";
-    font-size: 15px;
-    line-height: 1.8;
-    color: #313131;
-    background-color: #FFFFFF;
+  padding: 0;
+  margin: 0;
+  font-family: 'Helvetica Neue', Helvetica, Arial, 'Microsoft Yahei',
+    'Hiragino Sans GB', 'PingFang SC', 'WenQuanYi Micro Hei', sans-serif;
+  background: #ffffff;
+  scroll-behavior: smooth;
 }
-
-/* 
-   -webkit-scrollbar隐藏滚动条
-   手机：前置条件是高度固定，PC随意
-   使用此属性，window上的scroll事件就无法监听到了
-   通过监听body的滚动时可以，但是scrollTop始终是0
-*/
-
-::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
-    background-color: transparent;
+ul,
+li {
+  list-style: none;
 }
-
-::-webkit-scrollbar-button {
-    display: none;
+input,
+select,
+textarea {
+  font-family: inherit;
+  border-radius: 0;
+  appearance: none;
+  -webkit-appearance: none;
+  outline: 0;
+  border: 0;
 }
-
-::-webkit-scrollbar-thumb {
-    background-color: #999;
-}
-
-::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-
-::selection {
-    background-color: #444;
-    color: #f9f9f9;
-}
-
-@keyframes fadeUp {
-    from {
-        opacity: 0;
-        transform: translateY(36px);
-    }
-    to {
-        opacity: 1;
-        transform: none;
-    }
-}
-
-@keyframes fadeOutUp {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-        transform: translate3d(0, -350%, 0);
-    }
-}
-
-/*文字冒泡*/
-
-.bubble {
-    z-index: 999;
-    padding: 0 !important;
-    color: #313131;
-    font-size: 12px;
-    position: absolute;
-    animation-duration: 1s;
-    animation-fill-mode: both;
-    animation-name: fadeOutUp;
-}
-
-.hide {
-    display: none !important;
-}
-
-.select-none {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.animation-fadeUp {
-    animation-timing-function: ease;
-    animation-duration: 800ms;
-    animation-fill-mode: both;
-    animation-name: fadeUp;
-}
-
 a {
-    color: #313131;
-    text-decoration: underline;
+  text-decoration: none;
+  color: #313131;
 }
-
-ul, li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+* {
+  font-size: 14px;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  color: #313131;
+  -webkit-tap-highlight-color: transparent;
+  font-weight: normal;
 }
-
-body>* {
-    max-width: 580px;
-    margin: 0 auto;
-    padding: 0 23px;
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+  background-color: transparent;
 }
-
+::-webkit-scrollbar-thumb {
+  border-radius: 2px;
+  background-color: #999999;
+}
+::selection {
+  background-color: #4a4a4a;
+  color: #f9f9f9;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
+.select-none {
+  user-select: none;
+  -webkit-user-select: none;
+}
+.animation-fade-up {
+  animation-timing-function: ease;
+  animation-duration: 800ms;
+  animation-fill-mode: both;
+  animation-name: fade-up;
+}
+@keyframes fade-up {
+  from {
+    opacity: 0;
+    transform: translateY(36px);
+  }
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+@-webkit-keyframes fade-up {
+  from {
+    opacity: 0;
+    -webkit-transform: translateY(36px);
+  }
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+  }
+}
+.hover-underline {
+  position: relative;
+}
+.hover-underline:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #313131;
+  visibility: hidden;
+  transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+  transition: transform 200ms ease-in-out;
+  -webkit-transition: transform 200ms ease-in-out;
+}
+.hover-underline:hover:after {
+  visibility: visible;
+  transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+}
+.container {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 560px;
+}
 .header {
-    margin-top: 40px;
-    margin-bottom: 50px;
+  margin-top: 40px;
+  margin-bottom: 50px;
 }
-
-.header .logo{
-    text-decoration: none;
+.header .logo {
+  display: inline-block;
+  vertical-align: middle;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 500ms linear;
+  -webkit-transition: transform 500ms linear;
 }
-
+.header .logo:hover {
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+}
+.header input {
+  display: none;
+}
 .header .title {
-    display: none;
+  display: inline-block;
+  vertical-align: middle;
+  display: none;
 }
-
-.header .logo>img {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, .1);
-    vertical-align: bottom;
-}
-
 .header .menu {
+  display: inline-block;
+  font-size: 0;
+}
+.header .menu a {
+  font-size: 16px;
+  display: inline-block;
+  margin: 0 13px;
+  position: relative;
+}
+.header .menu a:before {
+  content: '';
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  background-color: #313131;
+  position: absolute;
+  left: -13.5px;
+  top: 6.5px;
+}
+.header .menu a:first-child {
+  margin-left: 20px;
+}
+.header .menu a:last-child {
+  margin-right: 0;
+}
+.header .menu a:first-child:before {
+  display: none;
+}
+.header .menu-togger {
+  display: none;
+}
+.footer {
+  margin-top: 20px;
+  margin-bottom: 4px;
+  font-size: 0;
+}
+.footer > * {
+  font-size: 14px;
+  margin: 0 4px;
+  position: relative;
+}
+.footer > *:first-child {
+  margin-left: 0;
+}
+.footer > *:last-child {
+  margin-right: 0;
+}
+.footer a:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #313131;
+}
+.footer #moveUp {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background: #e8e6e6;
+  transition: bottom 500ms ease-in-out 0ms;
+  -webkit-transition: bottom 500ms ease-in-out 0ms;
+}
+.footer #moveUp::after {
+  position: absolute;
+  top: 8px;
+  left: 7px;
+  content: '';
+  border-right: 8px solid #e8e6e6;
+  border-bottom: 13px solid #949393;
+  border-left: 8px solid #e8e6e6;
+}
+.page-title {
+  font-size: 20px;
+  margin: 14px 0;
+  font-weight: bold;
+}
+.list-group {
+  margin-bottom: 14px;
+}
+.list-group > h2 {
+  font-size: 15px;
+  font-weight: bold;
+  margin: 14px 0;
+}
+.list-group li {
+  padding: 10px 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+.list-group li .date {
+  padding: 0 8px 0 16px;
+  color: #666666;
+  font-size: 15px;
+  vertical-align: middle;
+}
+.list-group li .title {
+  font-size: 15px;
+  vertical-align: middle;
+}
+.list-group li .categorie {
+  font-size: 12px;
+  color: #666666;
+  vertical-align: middle;
+  margin-left: 8px;
+}
+.page-categories > ul {
+  margin: 14px 0;
+  font-size: 0;
+  word-break: break-all;
+}
+.page-categories > ul li {
+  display: inline-block;
+  padding: 5px 12px 5px 0;
+}
+.page-categories > ul li a {
+  display: inline;
+  font-size: 15px;
+  position: relative;
+}
+.page-categories > ul li a:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #313131;
+}
+.page-search #search-input {
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 0 0 10px 0;
+  margin-bottom: 28px;
+  border-bottom: 2px solid #eeeeee;
+}
+.page-chat form {
+  display: block;
+  padding: 10px;
+  border: 1px solid #dddddd;
+  position: relative;
+}
+.page-chat form input {
+  font-size: 13px;
+  display: block;
+  border-bottom: 1px dashed #cccccc;
+  width: 100%;
+  line-height: 30px;
+  margin-bottom: 10px;
+  transition: border 300ms linear;
+}
+.page-chat form input:focus {
+  border-bottom: 1px dashed #444;
+}
+.page-chat form textarea {
+  display: block;
+  width: 100%;
+  line-height: 1.8;
+  resize: none;
+  font-size: 13px;
+}
+.page-chat form span {
+  cursor: pointer;
+  position: absolute;
+  right: 8px;
+  bottom: 8px;
+  background-color: #ededed;
+  font-size: 13px;
+  padding: 5px 16px;
+  border-radius: 16px;
+  transition: all 200ms ease-in-out;
+}
+.page-chat form span:hover {
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+}
+.page-chat .page-chat-load-container {
+  margin-top: 18px;
+  margin-bottom: 14px;
+  text-align: center;
+}
+.page-chat .page-chat-load {
+  display: inline-block;
+  cursor: pointer;
+  background-color: #ededed;
+  font-size: 13px;
+  padding: 5px 16px;
+  border-radius: 16px;
+}
+.page-chat-list li {
+  margin-top: 16px;
+  padding: 14px;
+  border: 1px solid #dddddd;
+}
+.page-chat-list li .info {
+  height: 35px;
+  position: relative;
+}
+.page-chat-list li .head {
+  height: 100%;
+  width: auto;
+  border-radius: 50%;
+  vertical-align: middle;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+}
+.page-chat-list li .name {
+  cursor: default;
+  display: inline-block;
+  color: #5f5f5f;
+  font-size: 13px;
+  margin-left: 8px;
+  max-width: 110px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+}
+.page-chat-list li .name-true {
+  cursor: pointer;
+  border-bottom: 1px solid #313131;
+}
+.page-chat-list li .date {
+  height: 100%;
+  float: right;
+}
+.page-chat-list li .date::before {
+  content: ' ';
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+}
+.page-chat-list li .date span {
+  color: #b3b3b3;
+  vertical-align: middle;
+}
+.page-chat-list li .content {
+  word-break: break-all;
+  font-size: 13px;
+  margin-top: 10px;
+}
+@media screen and (max-width: 600px) {
+  .container {
+    max-width: 520px;
+  }
+}
+@media screen and (max-width: 560px) {
+  .container {
+    max-width: 560px;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  body {
+    padding-top: 54px;
+    font-size: 12px;
+  }
+  .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    width: 100%;
+    background-color: #fff;
+    text-align: center;
+    margin: 0 !important;
+    padding-left: 0 !important;
+    padding-right: 0 !important;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  }
+  .header .logo {
+    width: 32px;
+    height: 32px;
+    position: absolute;
+    left: 15px;
+  }
+  .header .title:before {
+    content: ' ';
     display: inline-block;
     vertical-align: middle;
-}
-
-.header .menu a {
-    line-height: 35px;
-    margin-left: 24px;
-    position: relative;
-}
-
-.header .menu a:after {
-    /* 中文特殊字符 */
-    content: '·';
-    padding-left: 12px;
-    /* position: absolute;防止出现下划线 */
+    height: 100%;
+    visibility: hidden;
+  }
+  .header .title {
+    font-size: 13px;
+    vertical-align: middle;
+    display: inline-block;
+    height: 32px;
+  }
+  .header .menu-togger {
     position: absolute;
-    font-weight: bold;
-}
-
-.header .menu a:last-child:after {
-    display: none;
-}
-
-.list-group>span {
-    color: #ccc;
-    font-size: 16px;
-}
-
-.list-group>ul {
-    padding-left: 40px;
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
-.list-group li {
-    list-style: disc;
-    line-height: 35px;
-}
-
-.list-group .time {
-    color: #666;
-}
-
-.list-group .categories a {
-    text-decoration: none;
-    color: #666;
-    padding-left: 8px;
-}
-
-body>.footer {
-    margin-top: 30px;
-}
-
-.footer .up {
-    position: fixed;
-    right: 20px;
-    bottom: -40px;
-    width: 30px;
-    height: 30px;
-    background: #E8E6E6;
-    transition: all 500ms ease 0ms;
-}
-
-.footer .up.show {
-    bottom: 20px;
-}
-
-.footer .up:after {
-    position: absolute;
-    top: 8px;
-    left: 7px;
+    right: 15px;
+    width: 32px;
+    height: 32px;
+    display: inline-block;
+    text-align: right;
+  }
+  .header .menu-togger:before {
+    content: ' ';
+    height: 100%;
+    width: 1px;
+    display: inline-block;
+    vertical-align: middle;
+    visibility: hidden;
+  }
+  .header .menu-togger:after {
     content: '';
-    border-right: 8px solid #E8E6E6;
-    border-bottom: 13px solid #949393;
-    border-left: 8px solid #E8E6E6;
-}
-
-@media screen and (max-width: 600px) {
-    body {
-        font-size: 13px;
-        padding-top: 55px;
-    }
-    body>* {
-        width: auto;
-    }
-    .header {
-        position: fixed;
-        z-index: 999;
-        margin: 0;
-        top: 0;
-        left: 0;
-        right: 0;
-        background-color: white;
-        height: 45px;
-        box-shadow: 0 1px 5px rgba(0, 0, 0, .1);
-    }
-    .header .logo {
-        display: none;
-    }
-    .header .menu {
-        position: fixed;
-        top: 53px;
-        right: -200px;
-        z-index: 99;
-        background-color: white;
-        box-shadow: 0 1px 5px rgba(0, 0, 0, .1);
-        overflow: hidden;
-        min-width: 100px;
-        height: auto;
-        transition: all 500ms ease 0ms;
-    }
-    .header .menu.show {
-        right: 20px;
-    }
-    .header .menu a {
-        display: block;
-        text-align: center;
-        white-space: nowrap;
-        line-height: 30px;
-        text-decoration: none;
-        padding: 0;
-        margin: 0;
-    }
-    .header .menu a:hover {
-        background-color: #EEE;
-    }
-    .header .menu a:after {
-        display: none;
-    }
-    .header .title {
-        display: inline-block;
-        line-height: 45px;
-        font-size: 15px;
-        text-decoration: none;
-    }
-    .header .icon {
-        width: 20px;
-        height: 2px;
-        border-top: 2px solid #ccc;
-        border-bottom: 2px solid #ccc;
-        background-color: #ccc;
-        padding: 5px 0;
-        background-clip: content-box;
-        float: right;
-        margin-top: 13px;
-    }
-    .list-group>ul {
-        padding-left: 35px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    .list-group>span {
-        font-size: 15px;
-    }
-    .list-group li {
-        line-height: 30px;
-    }
-    .list-group .time.md, .list-group .categories.md {
-        display: none;
-    }
+    width: 20px;
+    height: 2px;
+    border-top: 2px solid #cccccc;
+    border-bottom: 2px solid #cccccc;
+    background-color: #cccccc;
+    padding: 5px 0;
+    background-clip: content-box;
+    display: inline-block;
+    vertical-align: middle;
+  }
+  .header .menu {
+    position: fixed;
+    right: 15px;
+    top: 75px;
+    display: inline-block;
+    /*透明度为0，点击无效*/
+    opacity: 0;
+    pointer-events: none;
+    box-shadow: 0 0px 5px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: all 300ms ease-in-out;
+    -webkit-transition: all 300ms ease-in-out;
+  }
+  .header .menu a {
+    background-color: #ffffff;
+    text-align: center;
+    display: block;
+    margin: 0 !important;
+    padding: 8px 22px;
+    font-size: 12px;
+    transition: background-color 400ms linear;
+    -webkit-transition: background-color 400ms linear;
+  }
+  .header .menu a:hover {
+    background-color: #f8f8f8;
+  }
+  .header .menu a:before {
+    display: none;
+  }
+  .header .menu a:after {
+    display: none;
+  }
+  .header input:checked ~ .menu {
+    top: 65px;
+    pointer-events: auto;
+    opacity: 1;
+  }
+  .footer > * {
+    font-size: 12px;
+  }
+  .page-title {
+    font-size: 18px;
+  }
+  .list-group > h2 {
+    font-size: 14px;
+  }
+  .list-group li .date,
+  .list-group li .title {
+    font-size: 12px;
+  }
+  .list-group li .categorie {
+    font-size: 10px;
+  }
+  .list-group li {
+    padding: 8px 0;
+  }
+  .page-categories > ul li a {
+    font-size: 12px;
+  }
+  .page-search #search-input {
+    font-size: 12px;
+    padding: 0 0 8px 0;
+    margin-bottom: 25px;
+    border-bottom: 2px solid #eaeaea;
+  }
+  .page-chat form input,
+  .page-chat form textarea,
+  .page-chat-list li .name {
+    font-size: 12px;
+  }
+  .page-chat form span,
+  .page-chat-list li .date span,
+  .page-chat .page-chat-load {
+    font-size: 11px;
+  }
+  .page-chat-list li .content {
+    font-size: 11px;
+    line-height: 1.8;
+  }
+  .page-chat-list li {
+    padding: 10px;
+  }
+  .page-chat-list li .info {
+    height: 32px;
+  }
 }
