--- a/static/css/blog-post.css
+++ b/static/css/blog-post.css
@@ -109,6 +109,7 @@
   border-radius: 2px;
   background-color: #f6f8fa;
   max-height: 550px;
+  tab-size: 4;
 }
 .post pre code {
   background-color: transparent;
