--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer class="container footer">
   <span>{{ site.footerText }}</span>
   <a href="{{ site.baseUrl }}/sitemap.xml">网站地图</a>
-  <span>Theme By</span>
+  <span>Theme From</span>
+  <!-- 请保留 -->
   <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a>
   <div id="moveUp"></div>
 </footer>
