--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,21 +1,9 @@
-<script>window.blog={baseUrl:""}</script>
-<!-- 防止缓存，编译后链接更新 -->
+<!-- 配置信息 -->
+<script>window.blog={baseUrl:"{{site.baseUrl}}", bmobApplicationId: "{{site.bmobApplicationId}}", bmobRestApiKey: "{{site.bmobRestApiKey}}"}</script>
+<!-- 引入页面中配置的JS -->
 {% for js in pageJS %}
 <script type="text/javascript" src="{{site.baseUrl}}/static/js/{{ js }}?t={{ site.time | date: "%Y%m%d%H%M%S" }}"></script>
 {% endfor %}
-<!-- MTA腾讯移动分析 -->
-<script>
-  var _mtac = {"performanceMonitor":1,"senseQuery":1};
-  (function() {
-    var mta = document.createElement("script");
-    mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
-    mta.setAttribute("name", "MTAH5");
-    mta.setAttribute("sid", "500581966");
-    mta.setAttribute("cid", "500581972");
-    var s = document.getElementsByTagName("script")[0];
-    s.parentNode.insertBefore(mta, s);
-  })();
-</script>
 <!-- 百度的自动推送 -->
 <script>
   (function(){
@@ -31,3 +19,19 @@
     s.parentNode.insertBefore(bp, s);
   })();
 </script>
+
+{% if site.mta %}
+<!-- MTA腾讯移动分析 -->
+<script>
+  var _mtac = {"performanceMonitor":1,"senseQuery":1};
+  (function() {
+    var mta = document.createElement("script");
+    mta.src = "//pingjs.qq.com/h5/stats.js?v2.0.4";
+    mta.setAttribute("name", "MTAH5");
+    mta.setAttribute("sid", "{{site.mtaSid}}");
+    mta.setAttribute("cid", "{{site.mtaCid}}");
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(mta, s);
+  })();
+</script>
+{% endif %}
