--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="container footer">
   <span>{{ site.footerText }}</span>
-  <a href="{{ site.baseUrl }}/sitemap.xml">网站地图</a>
+  <a href="{{ site.baseUrl }}/static/xml/sitemap.xml">网站地图</a>
   <span>Theme From</span>
   <!-- 请保留 -->
   <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a>
