--- a/_includes/script.html
+++ b/_includes/script.html
@@ -1,8 +1,9 @@
+{% assign buildAt = site.time | date: "%Y%m%d%H%M%S" %}
 <!-- 配置信息 -->
-<script>window.blog={baseUrl:"{{site.baseUrl}}", bmobApplicationId: "{{site.bmobApplicationId}}", bmobRestApiKey: "{{site.bmobRestApiKey}}"}</script>
+<script>window.blog={baseUrl:"{{site.baseUrl}}", buildAt:"{{buildAt}}", bmobApplicationId: "{{site.bmobApplicationId}}", bmobRestApiKey: "{{site.bmobRestApiKey}}"}</script>
 <!-- 引入页面中配置的JS -->
 {% for js in pageJS %}
-<script type="text/javascript" src="{{site.baseUrl}}/static/js/{{ js }}?t={{ site.time | date: "%Y%m%d%H%M%S" }}"></script>
+<script type="text/javascript" src="{{site.baseUrl}}/static/js/{{ js }}?t={{ buildAt }}"></script>
 {% endfor %}
 <!-- 百度的自动推送 -->
 <script>
