--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
-<footer class="container footer">
+<footer class="container footer animation-fade-up">
   <span>{{ site.footerText }}</span>
   <a href="{{ site.baseUrl }}/static/xml/sitemap.xml">网站地图</a>
   <span>Theme From</span>
   <!-- 请保留 -->
   <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a>
-  <div id="moveUp"></div>
+  <div id="moveUp" style="display: none"></div>
 </footer>
