--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -2,8 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Helvetica Neue', Helvetica, Arial, 'Microsoft Yahei',
-    'Hiragino Sans GB', 'PingFang SC', 'WenQuanYi Micro Hei', sans-serif;
+  font-family: 'Helvetica Neue', Helvetica, 'Microsoft Yahei';
   background: #ffffff;
   scroll-behavior: smooth;
 }
