--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,3 +6,15 @@
   <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a>
   <div id="moveUp" style="display: none"></div>
 </footer>
+<!-- 全局属性blog -->
+<script>window.blog={baseUrl:"{{site.baseUrl}}", buildAt:"{{buildAt}}", bmobApplicationId: "{{site.bmobApplicationId}}", bmobRestApiKey: "{{site.bmobRestApiKey}}"}</script>
+<!-- 引入页面中配置的JS -->
+{% for js in pageJS %}
+<script type="text/javascript" src="{{site.baseUrl}}/static/js/{{ js }}?t={{ buildAt }}"></script>
+{% endfor %}
+<!-- 引入配置的插件 -->
+{% for cp in site.customPlugins %}
+  {% if cp.use %}
+  {% include {{cp.file}} values=cp %}
+  {% endif %}
+{% endfor %}
