--- a/_includes/plugin-mathjax.html
+++ b/_includes/plugin-mathjax.html
@@ -1,19 +1,19 @@
 <!-- MathJax数学公式支持 -->
 <style>
-.has-jax {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-color: transparent !important;
-  line-height: normal !important;
-  word-break: normal !important;
-  padding: 0 !important;
-  margin: 0 !important;
-}
-.has-jax *{
-  outline: 0;
-}
+  .has-jax {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: transparent !important;
+    line-height: normal !important;
+    word-break: normal !important;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+  .has-jax * {
+    outline: 0;
+  }
 </style>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
@@ -37,4 +37,7 @@
     }
   });
 </script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+<script
+  type="text/javascript"
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+></script>
