--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
-<footer class="container footer animation-fade-up">
+<footer class="footer select-none animation-fade-up">
   <span>{{ site.footerText }}</span>
   <a href="{{ site.baseUrl }}/sitemap.xml">网站地图</a>
-  <span>Theme From</span>
-  <!-- 请保留 -->
-  <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a>
-  <div id="moveUp" style="display: none"></div>
+  <!-- 请保留主题来源 -->
+  <span>Theme By</span>
+  <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
 </footer>
+<img id="moveUp" class="select-none" src="{{site.baseUrl}}/static/img/up.svg">
 <!-- 全局属性blog -->
 <script>window.blog={baseUrl:"{{site.baseUrl}}", buildAt:"{{buildAt}}"}</script>
 <!-- 引入页面中配置的JS -->
