--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,12 +6,12 @@
   <meta name="applicable-device" content="pc,mobile">
   <meta name="google-site-verification" content="ckhUaoa05QCmWoE1FafzTBcqYI4yBOy-UJKopXDS18M" />
   <meta name="author" content="{{ site.author }}" />
-  {% if page.isPage %}
-  <meta name="description" content="{{ site.description }}"/>
-  <meta name="keywords" content="{{ site.keywords }}"/>
-  {% else %}
+  {% if page.categories %}
   <meta name="description" content="{{ page.title }}"/>
   <meta name="keywords" content="{{ site.author }}{% for category in page.categories %},{{ category }}{% endfor %}"/>
+  {% else %}
+  <meta name="description" content="{{ site.description }}"/>
+  <meta name="keywords" content="{{ site.keywords }}"/>
   {% endif %}
   <link rel="icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon"/>
