--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -1,4 +1,4 @@
-{%- assign pageCSS = "blog.css,blog-post.css,highlight.css" -%}
+{%- assign pageCSS = "common.css,post.css,highlight.css" -%}
 {%- assign pageCSS = pageCSS | split: "," -%}
 {%- assign pageJS = "blog.js" | split: "," -%}
 {%- assign buildAt = site.time | date: "%Y%m%d%H%M%S" -%}
@@ -7,8 +7,11 @@
 {% include head.html %}
 <body ondragstart="return false;">
 {% include header.html %}
-<div class="container page-post animation-fade-up">
-  <h1 class="page-title" id="{{ page.title }}">{{ page.title }}</h1>
+<div class="page page-post animation-fade-up">
+  <h1 class="title" id="{{ page.title }}">{{ page.title }}</h1>
+  {% if page.date %}
+  <div class="subtitle">{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</div>
+  {% endif %}
   <div class="post">
     {{ content }}
   </div>
