--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer select-none animation-fade-up">
   <span>{{ site.footerText }}</span>
-  <a href="{{ site.baseUrl }}/sitemap.xml">网站地图</a>
+  <a href="{{ site.baseUrl }}/static/xml/rss.xml">RSS订阅</a>
   <!-- 请保留主题来源 -->
   <span>Theme By</span>
   <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
