--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,9 +13,9 @@
   <meta name="description" content="{{ site.description }}"/>
   <meta name="keywords" content="{{ site.keywords }}"/>
   {% endif %}
-  <link rel="icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon" />
-  <link rel="shortcut icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon"/>
+  <link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon"/>
   {% for css in pageCSS %}
-  <link rel="stylesheet" href="{{site.baseUrl}}/static/css/{{ css }}?t={{buildAt}}">
+  <link rel="stylesheet" href="{{site.baseurl}}/static/css/{{ css }}?t={{buildAt}}">
   {% endfor %}
 </head>
