--- a/_includes/ext-adsense.html
+++ b/_includes/ext-adsense.html
@@ -1,3 +1,4 @@
+<!-- Google Adsense -->
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <ins class="adsbygoogle"
      style="display:block"
