--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,4 @@
+{%- assign buildAt = site.time | date: "%Y%m%d%H%M%S" -%}
 <head>
   <title>{{ page.title }}-{{ site.title }}</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
@@ -6,16 +7,21 @@
   <meta name="applicable-device" content="pc,mobile">
   <meta name="google-site-verification" content="ckhUaoa05QCmWoE1FafzTBcqYI4yBOy-UJKopXDS18M" />
   <meta name="author" content="{{ site.author }}" />
-  {% if page.categories %}
+  {%- if page.categories %}
   <meta name="description" content="{{ page.title }}"/>
   <meta name="keywords" content="{{ site.author }}{% for category in page.categories %},{{ category }}{% endfor %}"/>
   {% else %}
   <meta name="description" content="{{ site.description }}"/>
   <meta name="keywords" content="{{ site.keywords }}"/>
-  {% endif %}
+  {% endif -%}
   <link rel="icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon" />
   <link rel="shortcut icon" href="{{site.baseurl}}/static/img/favicon.ico" type="image/x-icon"/>
-  {% for css in pageCSS %}
-  <link rel="stylesheet" href="{{site.baseurl}}/static/css/{{ css }}?t={{buildAt}}">
-  {% endfor %}
+  <link rel="stylesheet" href="{{site.baseurl}}/static/css/common.css?t={{buildAt}}">
+  {%- if page.layout == "mypost" %}
+  <link rel="stylesheet" href="{{site.baseurl}}/static/css/post.css?t={{buildAt}}">
+  <link rel="stylesheet" href="{{site.baseurl}}/static/css/highlight.css?t={{buildAt}}">
+  {%- endif %}
+  {%- if page.layout == "page" %}
+  <link rel="stylesheet" href="{{site.baseurl}}/static/css/page.css?t={{buildAt}}">
+  {%- endif %}
 </head>
