--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,12 +1,10 @@
-{%- assign pageCSS = page.css -%}
-{%- assign pageJS = page.js -%}
-{%- assign buildAt = site.time | date: "%Y%m%d%H%M%S" -%}
 <!DOCTYPE html>
 <html>
-{% include head.html %}
+{% include head.html -%}
 <body ondragstart="return false;">
-{% include header.html %}
+{% include header.html -%}
 {{ content }}
-{% include footer.html %}
+{% include footer.html -%}
+{% include script.html -%}
 </body>
 </html>
