--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,11 @@
-<footer class="footer select-none animation-fade-up">
+<footer class="footer select-none">
   <span>{{ site.footerText }}</span>
   <a href="{{ site.baseurl }}/static/xml/rss.xml">RSS订阅</a>
   {%- comment %} 请保留主题来源，么么哒~ {% endcomment %}
   <span>Theme By</span>
   <a href="https://github.com/TMaize/tmaize-blog">TMaize</a>
 </footer>
-<img id="moveUp" class="select-none" src="{{site.baseurl}}/static/img/up.svg">
+<div id="to-top" class="select-none">
+  <span></span>
+  <span></span>
+</div>
