--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -3,7 +3,7 @@
 {% include head.html -%}
 <body ondragstart="return false;">
 {% include header.html -%}
-<div class="page page-post animation-fade-up">
+<div class="page page-post">
   <h1 class="title" id="{{ page.title }}">{{ page.title }}</h1>
   {% if page.date %}
   <div class="subtitle">{{site.author}} 于 {{ page.date | date: "%Y-%m-%d" }} 发布</div>
